# nsu-computational-linguistics

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: Matchers.hpp  Models.hpp  types.hpp
include/dict/: Lemma.h
include/text-parser/: TextAnalyzer.h
src/: Matchers.cpp  Models.cpp
src/dict/: OpenCorpaDict.cpp  WordForm.cpp
src/text-parser/: Converter.cpp  TextAnalyzer.cpp
task1/: CMakeLists.txt  README.md  main.cpp
task1/include/: utils.h
task1/include/dict/: Lemma.h  OpenCorpaDict.h  WordForm.h
task1/include/text-parser/: Converter.hpp  TextAnalyzer.h
task1/src/: utf-converter.cpp
task1/src/dict/: Lemma.cpp  OpenCorpaDict.cpp
task1/src/text-parser/: TextAnalyzer.cpp
texts-small/: Cвятогор и тяга земная.txt
